syntax = "proto3";

option go_package = "./";

service VideoService {
  rpc UploadVideo (UploadVideoRequest) returns (UploadVideoResponse);
  rpc GetVideoMetadata (GetVideoMetadataRequest) returns (GetVideoMetadataResponse);
  rpc StreamVideo (StreamVideoRequest) returns (StreamVideoResponse);
  rpc ListVideos (ListVideosRequest) returns (ListVideosResponse);
}

message UploadVideoRequest {
  string title = 1;
  string description = 2;
  string file_path = 3; // URL or path to the video file on S3
  string category = 4;
  bool is_premium = 5;
}

message UploadVideoResponse {
  string video_id = 1;
  string upload_url = 2; // URL to upload the video file to
}

message GetVideoMetadataRequest {
  string video_id = 1;
}

message GetVideoMetadataResponse {
  string video_id = 1;
  string title = 2;
  string description = 3;
  string file_path = 4; // URL or path to the video file on S3
  string upload_date = 5;
  string category = 6;
  bool is_premium = 7;
}

message StreamVideoRequest {
  string video_id = 1;
}

message StreamVideoResponse {
  string video_url = 1; // URL to stream the video
}

message ListVideosRequest {
  string category = 1;
  bool only_premium = 2;
}

message ListVideosResponse {
  repeated VideoMetadata videos = 1;
}

message VideoMetadata {
  string video_id = 1;
  string title = 2;
  string description = 3;
  string file_path = 4; // URL or path to the video file on S3
  string upload_date = 5;
  string category = 6;
  bool is_premium = 7;
}
